fix(Vehicles.module.css): aligning table items in the center

--- a/frontend/src/Components/VehicleList.module.css
+++ b/frontend/src/Components/VehicleList.module.css
@@ -3,7 +3,7 @@
     margin: 1.25rem auto;
     border-collapse: collapse;
     font-size: 1rem;
-    text-align: left;
+    text-align: center;
     background-color: #fff;
     box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
     border-radius: 0.5rem;
